# pp-web-base

./: .flow  .hgignore  .hgtags  .project  .pydevproject  MANIFEST.in  README.rst  development.ini  production.ini  setup.cfg  setup.py
auth/: groups.ini  passwd.csv  permissions.ini
docs/: index.rst
docs/source/: index.rst
pp/bookingsys/web/: __init__.py  views.py
pp/bookingsys/web/scripts/: main.py  populate.py
pp/bookingsys/web/templates/: base.jinja2  mytemplate.pt
pp/bookingsys/web/tests/: test_example.py
pp/web/base/: __init__.py  restfulhelpers.py  util.py  views.py
pp/web/base/scripts/: main.py  populate.py
pp/web/base/templates/: base.jinja2  login.jinja2  mytemplate.pt  ping.jinja2  protected.jinja2
pp/web/base/tests/: test_example.py  test_forjenkins.py  test_ping.py
