[metadata]
name = pp-web-base
version = 1.0.1
description =  Core Pyramid web package
author =  Edward Easton
author_email = edward.easton@pythonpro.co.uk
keywords =

classifiers =
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Framework :: Pylons
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application


install_requires =
    pyramid==1.4
    SQLAlchemy
    transaction
    pyramid_debugtoolbar
    pyramid_jinja2
    pyramid_beaker
    zope.sqlalchemy
    waitress
    pp-db
    pp-auth

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest-cov

console_scripts =
	populate_web = pp.web.base.scripts.populate:main

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist
